--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "prisma": "^6.6.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
+    "prisma-erd-generator": "^2.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
