--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.6.0"
   },
   "devDependencies": {
