--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
     "prisma": "^6.6.0"
   },
   "devDependencies": {
@@ -23,6 +22,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "prisma-erd-generator": "^2.0.4",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
