--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.6.0",
-    "express": "^5.1.0",
-    "prisma": "^6.6.0"
+    "@prisma/client": "^6.8.2",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
+    "prisma": "^6.8.2",
     "prisma-erd-generator": "^2.0.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
