--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,12 @@
 # Etapa de construção
-FROM node:18 AS build
+FROM node:18-alpine AS build
 
 # Diretório de trabalho dentro do container
 WORKDIR /app
 
 # Copiar arquivos do projeto para dentro do container
 COPY package*.json ./
+COPY prisma ./prisma
 RUN npm install
 
 # Copiar o restante dos arquivos
@@ -15,7 +16,7 @@ COPY . .
 RUN npm run build
 
 # Etapa de execução
-FROM node:18
+FROM node:18-alpine
 
 # Diretório de trabalho dentro do container
 WORKDIR /app
